user service and tweet service